--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Lilita+One&display=swap');
 body {
     box-sizing: border-box;
     padding: 0;
@@ -12,11 +13,12 @@ body {
     display: grid;
     justify-content: center;
     height: 52px;
-    width: 100%;
-    background-color: #8c8890;
-    position: fixed;
+    background-color: #7c776a;
+    box-shadow: 0 8px 8px -4px lightgoldenrodyellow;
+    position: relative;
     padding: 0px 20px;
-    font-family: cursive;
+    font-family: 'Lilita One', cursive;
+    letter-spacing: 2px;
 }
 
 .nav>.nav-btn {
@@ -33,24 +35,28 @@ body {
     display: inline-block;
     padding: 13px 10px 13px 10px;
     text-decoration: none;
-    color: #565250;
+    color: #fff;
     font-weight: bold;
 }
 
 .nav>.nav-links>a:hover {
     border-bottom: 2px solid #565250;
-    color: #786e69;
+    color: #565250;
 }
 
 .nav>#nav-check {
     display: none;
 }
 
-@media (max-width:600px) {
+@media (max-width: 600px) {
+    .nav>.nav-links>a:hover {
+        border-bottom: 2px solid #565250;
+        color: #565250;
+    }
     .nav>.nav-btn {
         display: inline-block;
         position: absolute;
-        right: 10px;
+        right: 0px;
         top: 0px;
     }
     .nav>.nav-btn>label {
@@ -70,7 +76,8 @@ body {
         position: absolute;
         display: block;
         width: 100%;
-        background-color: #8c8890;
+        background-color: #7c776a;
+        box-shadow: 0 8px 8px -4px lightgoldenrodyellow;
         transition: all 0.3s ease-in;
         overflow-y: hidden;
         top: 50px;
@@ -80,6 +87,8 @@ body {
         display: grid;
         justify-content: center;
         align-items: center;
+        width: 15%;
+        margin: auto;
     }
     .nav>#nav-check:not(:checked)~.nav-links {
         height: 0px;
@@ -87,4 +96,70 @@ body {
     .nav>#nav-check:checked~.nav-links {
         height: 30vh;
     }
+}
+
+
+/* Footer*/
+
+footer {
+    background: #7c776a;
+    box-shadow: 0 0 8px -4px lightgoldenrodyellow;
+}
+
+.footer-area {
+    padding: 20px;
+    display: grid;
+    grid-template-columns: repeat(2, auto);
+    justify-content: space-between;
+    align-items: center;
+}
+
+.footer-text p {
+    margin: 0;
+    font-size: 14px;
+    color: #565250;
+}
+
+.footer-text p a {
+    color: #dcd0d0;
+    font-weight: bold;
+    text-decoration: none;
+}
+
+.footer-text p a:hover {
+    color: #565250;
+    text-decoration: underline;
+}
+
+.footer-menu li {
+    display: inline-block;
+    margin-left: 20px;
+}
+
+.footer-menu li:hover a {
+    color: #565250;
+}
+
+.footer-menu li a {
+    font-size: 14px;
+    color: #fff;
+}
+
+@media only screen and (max-width: 600px) {
+    .footer-area {
+        padding: 20px;
+        display: grid;
+        grid-template-columns: repeat(1, auto);
+        justify-content: center;
+    }
+    .footer-menu ul li {
+        display: none;
+    }
+}
+
+
+/*Header*/
+
+.header-section {
+    margin: 30px;
 }
