--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,58 @@ body {
 }
 
 
+/*Header*/
+
+.hero-image {
+    background-image: linear-gradient(rgba(123, 125, 106, 0.5), rgba(0, 0, 0, 0.5)), url("/img/header3.jpg");
+    height: 50%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+    padding-top: 500px;
+}
+
+.hero-text {
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+}
+
+.hero-text button {
+    border: 10px solid #7c776a;
+    outline: 0;
+    display: inline-block;
+    padding: 10px 25px;
+    color: #7c776a;
+    background-color: #fff;
+    text-align: center;
+    font-weight: bold;
+    font-size: 20px;
+    cursor: pointer;
+}
+
+.hero-text button:hover {
+    background-color: #7c776a;
+    color: #fff;
+    cursor: pointer;
+}
+
+.about-text1 {
+    padding: 40px 0px 20px 20px;
+    color: #222b36;
+}
+
+.about-text2 {
+    padding: 20px;
+    line-height: 30px;
+    color: #91a7b6;
+}
+
+
 /* Navbar style*/
 
 .nav {
@@ -19,6 +71,7 @@ body {
     padding: 0px 20px;
     font-family: 'Lilita One', cursive;
     letter-spacing: 2px;
+    z-index: 100;
 }
 
 .nav>.nav-btn {
@@ -155,11 +208,4 @@ footer {
     .footer-menu ul li {
         display: none;
     }
-}
-
-
-/*Header*/
-
-.header-section {
-    margin: 30px;
 }
