--- a/styles.css
+++ b/styles.css
@@ -144,6 +144,8 @@
                     /* About*/
                     
                     .about-section {
+                        position: relative;
+                        top: -50px;
                         background-color: #99907a;
                         width: 70%;
                         margin: auto;
